--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csv-sample-node",
-  "version": "0.1.0-SNAPSHOT",
+  "version": "0.1.0",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
