--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   "dependencies": {
     "config": "^3.2.5",
     "csvtojson": "^2.0.10",
+    "excel-csv-read-write": "^0.1.1-SNAPSHOT",
     "iconv-lite": "^0.5.1",
     "unzip": "^0.1.11"
   }
