--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "csv-sample-node",
-  "version": "0.1.2",
+  "version": "0.1.3-SNAPSHOT",
   "description": "",
   "main": "dist/index.js",
   "scripts": {
